src/Page_One/main.css
#main {
  background-color: black;
  height: 50rem;
  display: flex;
}

#text {
  color: #6C7A89;
  font-family: 'Bungee', cursive;
  color: #19B5FE;
  width: 80rem;
  font-size: 5rem;
  text-align: start;
  margin-left: 3rem;

}

#about {
  height: 100vh;
  width: 100vw;
}

#me {
  position: absolute;
  text-align: left;
  margin-left: 3rem;
  font-family: 'Bungee', cursive;
}

#info {
  font-family: 'Bungee', cursive;
  color: white;
  font-size: 3rem;
}

.contact {
  color: #F62459;
  font-size: 1rem;
}

#soon {
  font-family: 'Bungee', cursive;
  color: #36D7B7;
  width: 100rem;
  margin-top: 3rem;
  font-size: 2rem;
}


@media (max-width: 720px) {

  #info {
  margin-left: 0;
  font-size: 2rem;
    }

  #text {
    margin-left: 1rem;
    margin-top: 3rem;
    font-size: 40px;
  }

  #me {
    margin-left: 1rem;
    width: 1rem;
    font-size: 7px;
    display: flex;
    flex-flow: column;
  }
}


@media (max-width: 414px) {
  #text {
    width: 375px;
    width: 100px;
    font-size: 3rem;
    margin-left: 1rem;
  }

  #me {
    margin-left: 1rem;
  }

  #info {
    font-size: 2rem;
  }

  .contact {
    font-size: small;
  }

  #soon {
    margin-top: -8px;
  }

}

/* #me {
  width: 100px;
 }
*/

@media (max-width: 375px) {

  #info {
    font-size: 1rem;
  }

  #soon {
    font-size: 25px;
    margin-top: 1rem;
  }

  .contact {
    font-size: 8px;
  }
}

